@@ -1,27 +1,22 @@
 package com.example.jsgamesbackendmain.Bean.SmallBean.GameBean;
 
-import com.example.jsgamesbackendmain.Bean.MapperBean.MapperBean;
-import com.example.jsgamesbackendmain.Model.DAO.GameDAO;
 import com.example.jsgamesbackendmain.Model.DTO.Game.Response.GameListResponseDTO;
 import com.example.jsgamesbackendmain.Repository.GameRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class GameGetListByPlayedUserSmallBean {
-    @Autowired
-    private GameRepository gameRepository;
-    @Autowired
-    private MapperBean mapperBean;
-
+    private final GameRepository gameRepository;
     public List<GameListResponseDTO> exec(String userId, PageRequest pageRequest) {
-        List<GameDAO> list = gameRepository.findAllByPlayedUserOrderByViewCountDescGameIdAsc(userId, pageRequest)
-                .toList();
-
-        return list.stream().map(game -> mapperBean.to(game, GameListResponseDTO.class))
-                .collect(java.util.stream.Collectors.toList());
+        return gameRepository.findAllByPlayedUserOrderByViewCountDescGameIdAsc(userId, pageRequest)
+                .toList()
+                .stream().map(GameListResponseDTO::of)
+                .collect(Collectors.toList());
     }
 }
